--- a/Assignment/Profile Page/style.css
+++ b/Assignment/Profile Page/style.css
@@ -1,10 +1,10 @@
-*{
-    border: 1px solid red;
-}
+/* *{
+    border: 1px dotted red;
+} */
 
-body{
+/* body{
     margin: auto;
-}
+} */
 
 .nav{
     background-color: black;
@@ -12,7 +12,7 @@ body{
     justify-content: space-between;
     font-family: 'Roboto', sans-serif;
     align-items: center;
-    padding: 0% 20%;
+    padding: 0% 10%;
     height: auto;
     font-weight: bold;
 }
@@ -48,64 +48,86 @@ body{
     box-shadow: 4px 4px black;
 
 }
+#active{
+    color: white;
+}
 
-a {
+.nav-list a {
     color: rgb(182, 179, 179);
     text-decoration: none ;
     font-weight: bold;
 }
 
-.active{
-    color: white;
-}
 
 /* main */
 
 .main{
+
     display: flex;
     align-items: center;
     background-color: blanchedalmond;
     flex-direction: row;
-    margin: 0% 20%;
+    margin: 0% 10%;
     height: auto;
+    justify-content: space-between;
+
 }
 
+.information , .connections{
+    display: flex;
+    flex-direction: column;
+    justify-content:space-evenly;
+    padding-top: 2%;
+}
 .information{
-    display: flex;
-    flex-direction: column;
+    width: 50%;
+
+}
+.connections{
+    width: 30%;
 }
 
-.education{
-    display: flex;
-    flex-direction: column;
-    background-color: gray;
-}
 
 /* information  */
 
-.card{
-    height: auto;
-    display: flex;
-    flex-direction:column;
-    border: 2px solid gray;
-    margin: 30px auto;
-    font-family: 'Roboto', sans-serif;
 
+.card ,.education {
+    display: flex;
+    flex-direction: column;
+    background-color: gray;
+    border: 2px solid gray;
+    font-family: 'Roboto', sans-serif;
+    background-color: white;
+    margin: 2% 0%;
 }
 
 
 
-.blue{
+.blue , .black{
     margin:  -2px -2px 0px -2px ;
-    height: 35px;
     width: auto;
-    background-color:cornflowerblue;
     align-items:center;
     vertical-align: top;
-    padding: 2%;
+    padding: 1%;
 
 }
+.blue{
+    height: 35px;
+    background-color:cornflowerblue;
+}
 
+.black{
+    height: 0%;
+    background-color: black;
+    display: flex;
+}
+
+.black  p {
+    color: white;
+    margin: 0%;
+    padding: 2%;
+    font-size: large;
+}
 #iconuser{
     margin: -13px 0px 0px 7px;
     padding: 2px;
@@ -147,6 +169,9 @@ h5{
     padding-left: 3%;
     margin: 2% 0%
 }
+.info h4{
+    margin: 0% 0%;
+}
 
 .edit{
     display: flex;
@@ -159,7 +184,46 @@ p{
     font-size: small;
 }
 
-a{
+.edit a{
     padding-left: 2%;
-    font-size: small;
+    font-size: medium;
+}
+
+.info-education{
+    padding: 0% 0% 2% 2%;
+}
+
+.info-education h4{
+    color: gray;
+    margin-top: 0%;
+}
+
+.info-education h3{
+    margin-bottom: 1%;
+}
+
+/* connections */
+
+.requests{
+}
+
+#button-add{
+    background-color: #bdbdbd;
+    color: #fff;
+    border-radius: 50%;
+    border: none;
+    margin: 0% 2%;
+}
+
+.new-friend{
+    display: flex;
+    flex-direction: row;
+}
+img .new-friend{
+    margin: -13px 0px 0px 7px;
+    padding: 2px;
+    height: 50px;
+    border: 2px solid gray;
+    border-radius:50% ;
+    background-color: white;
 }
